# BMOS

./: .gitignore  BMOS.sln  BMOS.vcxproj  BmoProcess.h  CApplication.cpp  CApplication.h  CAudioForm.cpp  CAudioForm.h  CButton.cpp  CButton.h  CClickList.cpp  CClickList.h  CDesktop.cpp  CDesktop.h  CDragWindow.cpp  CDragWindow.h  CDropDownMenu.cpp  CDropDownMenu.h  CDropMenuItem.cpp  CDropMenuItem.h  CFile.cpp  CFile.h  CFiles.cpp  CFiles.h  CFolder.cpp  CFolder.h  CFolderForm.cpp  CFolderForm.h  CForm.cpp  CForm.h  CIcon.cpp  CIcon.h  CJoystick.cpp  CJoystick.h  CKeyCommand.cpp  CKeyCommand.h  CKeyMap.cpp  CKeyMap.h  CLabel.cpp  CLabel.h  (+67 more)
faq/: beemotes.txt  imageviewer.txt  manual.txt  videogames.txt  voice.txt  wifi.txt
images/: README.md
modules/: FindSDL2.cmake
pi/: message
scores/: hiscores.txt  loscores.txt
scripts/: 10-bmos.sh  armsdown.sh  armsinit.sh  armsup.sh  armsupslow.sh  emulaunch.sh  fistbump.sh  getip.sh  getmic.sh  getvolume.sh  leftdown.sh  leftup.sh  parade.sh  pointleft.sh  pointright.sh  punch.sh  restartwifi.sh  rightdown.sh  rightup.sh  update.sh  vol.sh  waveboth.sh  waveleft.sh  waveright.sh
servos/: armsdown  armsdownslow  armsup  waveboth
